@startuml

title __IMPL's Class Diagram__\n

  namespace com.rbac {
    namespace dao {
      namespace impl {
        class com.rbac.dao.impl.ResourceDaoImpl {
            + ResourceDaoImpl()
            + delete()
            + get()
            + getAll()
            + save()
            + update()
        }
      }
    }
  }
  

  namespace com.rbac {
    namespace dao {
      namespace impl {
        class com.rbac.dao.impl.RoleDaoImpl {
            + RoleDaoImpl()
            + delete()
            + get()
            + getAll()
            + save()
            + update()
        }
      }
    }
  }
  

  namespace com.rbac {
    namespace dao {
      namespace impl {
        class com.rbac.dao.impl.UserDaoImpl {
            + UserDaoImpl()
            + addNewRole()
            + appendRole()
            + delete()
            + get()
            + getAll()
            + removeRole()
            + save()
            + update()
        }
      }
    }
  }
  

  com.rbac.dao.impl.ResourceDaoImpl .up.|> com.rbac.dao.ResourceDao
  com.rbac.dao.impl.ResourceDaoImpl o-- com.rbac.db.ResourceDB : resourceDB
  com.rbac.dao.impl.RoleDaoImpl .up.|> com.rbac.dao.RoleDao
  com.rbac.dao.impl.RoleDaoImpl o-- com.rbac.db.RoleDB : rolesDB
  com.rbac.dao.impl.UserDaoImpl .up.|> com.rbac.dao.UserDao
  com.rbac.dao.impl.UserDaoImpl o-- com.rbac.db.RoleDB : roleDB
  com.rbac.dao.impl.UserDaoImpl o-- com.rbac.db.UsersDB : usersDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
